--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,11 +1,11 @@
 $darkGrey: #414141;
 @value darkGrey: #414141;
 
-$midGrey: #8b8a87;
-@value midGrey: #8B8A87;
+$midGrey: #6e6e6e;
+@value midGrey: #6e6e6e;
 
-$lightGrey: #6f6f6f;
-@value lightGrey: #6f6f6f;
+$lightGrey: #c3c3c3;
+@value lightGrey: #c3c3c3;
 
 $subduedGrey: #9f9f9f;
 @value subduedGrey: #9f9f9f;
