--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -4,7 +4,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
-  src: url("https://fonts.googleapis.com/css?family=Roboto");
+  src: url("https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500");
 }
 
 * {
