--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,11 +1,5 @@
 @import './variables.scss';
-
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 300;
-  src: url("https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500");
-}
+@import url(https://fonts.googleapis.com/css?family=Roboto);
 
 * {
   box-sizing: border-box;
@@ -13,13 +7,13 @@
 
 html {
   font-size: 16px; // 1rem
-  font-weight: 300;
+  font-weight: 200;
 }
 
 body {
   font-family: "Roboto", Tahoma, Arial, Helvetica, sans-serif;
   font-style: normal;
-  font-weight: 300;
+  font-weight: 200;
 
   color: $darkGrey;
 
